app1/deploy/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: NodePort
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30001
